<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/lavender"
    tools:context=".Signup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/lavender_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#448AFF"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/Login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#5C6BC0" />

            <EditText
                android:id="@+id/Login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#5C6BC0" />

            <Button
                android:id="@+id/Login_Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/login_Btn"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck">

            </Button>
            <TextView
                android:id="@+id/ForgotPassword_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="#5C6BC0"
                android:textSize="18sp">

            </TextView>


            <TextView
                android:id="@+id/LoginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/don_t_have_an_account_signup"
                android:textColor="#5C6BC0"
                android:textSize="18sp">

            </TextView>

            <ImageView
                android:id="@+id/GoogleAuth"
                android:layout_width="94dp"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/glogo"
              />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>